2016-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Initial repo creation.
2016-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added 'README'.
	* Moved 'centos7/install_rivendell_centos7.sh' to
	'install_rivendell.sh'.
2016-06-24 Fred Gleason <fredg@paravelsystems.com>
	* Added 'twolame' and 'libmad' to the set of dependency packages.
2016-06-27 Fred Gleason <fredg@paravelsystems.com>
	* Get installer working for RHEL 7.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Updated network configuration instructions in 'INSTALL'.
2016-06-28 Fred Gleason <fredg@paravelsystems.com>
	* Disabled the firewalld service in 'centos7/install_rivendell.sh'.
	* Added 'telnet', 'lwmon' and 'nc' packages in
	'centos7/install_rivendell.sh'.